technicus/static/css/style.css
html {
    border-top: .6rem solid rgb(103, 180, 180);
    background-color: #1b1b24;
}
body {
    display: grid;
    grid-template-rows: auto 1fr auto;
    min-height: calc(100svh - .6rem);
    max-width: 675px;
    margin: 0 auto;
    padding: 0 1.5rem;
}
body > header {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    gap: 1rem 2rem;
    margin: 2rem 0 0;
}
body > header > h1 { margin: 0; }
body > header > nav > ul {
    list-style: none;
    display: flex;
    flex-wrap: wrap;
    gap: .5rem 2rem;
    margin: 0;
    padding: 0;
}
main {
    margin: 4rem 0;
}
body > footer {
    margin: 0 0 2rem;
    opacity: 70%;
}
body > footer:hover {
    opacity: 100%;
}

.preview-article,
.article,
.article-content,
.page,
.page-content,
.special-page-content {
    margin: 4rem 0;
}
:nth-last-child(1 of .preview-article) {
    padding-bottom: 4rem;
}
.preview-article-content > :last-child {
    margin-bottom: 0;
}

.article > footer {
    border-top: .3rem solid #5a5a6f;
    border-radius: 0 0 .5rem .5rem;
    background-color: #3b3b4c;
    padding: 1rem;
    display: flex;
    flex-direction: column;
    gap: 1rem;
}
.page > footer {
    padding: 1rem 0;
}

.article-tags .article-tag:not(:last-child)::after {
    content: '•';
}

.pagination-index,
.pagination-article {
    margin: 1rem 0;
    display: flex;
    justify-content: space-between;
}
.pagination-article {
    flex-direction: column;
    gap: 1.5rem;
}

.tags-all-list {
    padding: 0;
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
    list-style-type: none;
}
.tags-all-list > li {
    margin: 0;
    padding: .1rem .8rem;
    border: 1px solid rgb(107, 107, 112);
    border-radius: .5rem;
}

/* Typography */

html {
    font-family: 'Source Sans 3', sans-serif;
    font-size: 16px;
    color: rgb(222, 222, 222);
}
body {
    font-size: 18px;
}
h2, h4, h5, h6,
time, pre, code,
.mono {
    font-family: 'Source Code Pro', monospace;
    line-height: 1.3;
}
h2 {
    font-size: 1.5em;
    font-weight: 300;
}
h3 {
    font-size: 1.5em;
    font-weight: 900;
    line-height: 1.3;
    color: #bbbbbb;
}
body > header > :is(h1, nav) {
    font-size: 1em;
    text-transform: uppercase;
}
body > header > h1 {
    font-weight: 900;
    line-height: 1.3;
}
body > header > h1 > :is(a:link, a:visited) {
    color: rgb(103, 180, 180);
}
body > header > h1 > :is(a:hover, a:focus, a:active) {
    color: #ffffff;
}
body > header > nav { font-weight: 300; }
h4, h5, h6 {
    font-size: 1em;
    font-weight: 700;
}
strong, b {
    font-weight: 900;
}
time, pre, code,
.mono {
    font-size: 14px;
}
div.highlight code {
    font-size: 13.3px;
}
.preview-article-content,
.article-content,
.page-content,
.special-page-content,
.pagination-index,
.pagination-article,
.article-tags {
    line-height: 1.6;
}
.article-content p,
.page-content p,
.special-page-content p {
    margin-top: 1.75rem;
    margin-bottom: 1.75rem;
}
:is(
    .preview-article-content,
    .article-content,
    .page-content,
    .special-page-content
) :is(h1, h2, h3, h4, h5, h6) {
    margin-top: 4rem;
}
main ul, main ol {
    padding-left: 1.5rem;
}
main ul > li, main ol > li {
    margin: 1em 0;
}
blockquote {
    margin-inline: 0 1rem;
    border-inline-start: 3px solid #3b3b4c;
    padding-inline-start: 1.4rem;
}
hr {
    width: 70%;
    height: 1px;
    border: 0;
    background-color: #5a5a6f;
    margin: 2.5rem auto;
}

/* Links */

a {
    text-decoration: none;
}
a:link, a:visited {
    color: rgb(160, 223, 223);
}
a:hover, a:focus, a:active {
    color: #ffffff;
}

/* Code blocks */

main, .preview-article,
.article, .page,
.article pre, .page pre {
    overflow-x: auto;
}
.article pre > code,
.page pre > code {
    display: inline-block;
    margin: 1rem;
}
div.highlight {
    border-radius: .5rem;
}

/* Images */

.article-content img,
.page-content img {
    border-radius: .5rem;
    display: block;
    margin: 0 auto;
    max-width: 100%;
    height: auto;
}

/* Animations */

.window-load a,
.window-load > footer  {
    transition: all 0.5s ease-out;
}

